# Employee-Management-System

./: .gitignore  CMakeLists.txt  README.md  db.txt  main.cpp
include/: App.h  Console.h  Constants.h  Database.h  File.h
source/: App.cpp  Console.cpp  Constants.cpp  Database.cpp  File.cpp
